--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,13 @@
   <groupId>ru.an</groupId>
   <artifactId>my-spring-app</artifactId>
   <packaging>war</packaging>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
   <name>my-spring-app Maven Webapp</name>
   <url>http://maven.apache.org</url>
+  <properties>
+    <spring.version>4.3.3.RELEASE</spring.version>
+    <jetty.version>9.4.5.v20170502</jetty.version>
+  </properties>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -14,8 +18,27 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+      <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-webmvc</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
+
   </dependencies>
+
   <build>
     <finalName>my-spring-app</finalName>
+    <plugins>
+      <plugin>
+        <groupId>org.eclipse.jetty</groupId>
+        <artifactId>jetty-maven-plugin</artifactId>
+        <version>${jetty.version}</version>
+        <executions>
+          <execution>
+            <phase>package</phase>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
   </build>
 </project>
